Move onClick handler to <li />, fix focus outline/shadow cutoff

--- a/client/web/src/enterprise/batches/execution/workspaces/WorkspacesListItem.module.scss
+++ b/client/web/src/enterprise/batches/execution/workspaces/WorkspacesListItem.module.scss
@@ -5,10 +5,15 @@
     h4,
     small,
     svg,
+    span,
     strong {
         // !important is to override the color applied to the svg Icon and strong
         // elements, which also have !important on them.
         color: var(--white) !important;
+    }
+
+    &:hover {
+        background-color: var(--primary-3);
     }
 }
 
