--- a/client/web/src/enterprise/batches/workspaces-list/Descriptor.module.scss
+++ b/client/web/src/enterprise/batches/workspaces-list/Descriptor.module.scss
@@ -1,22 +1,13 @@
 .status {
     width: 1.5rem;
+    flex-shrink: 0;
     padding-right: 0.5rem;
 }
 
 .name {
-    button {
-        text-align: left;
-        border: none;
-        display: flex;
-        padding: 0;
-        margin: 0;
-    }
-
-    h4 {
-        line-height: var(--icon-inline-md-size);
-        overflow-wrap: anywhere;
-        margin: 0;
-    }
+    line-height: var(--icon-inline-md-size);
+    overflow-wrap: anywhere;
+    margin: 0;
 }
 
 .path {
